<resources>
    <string-array name="kind_array">
        <item>ללא</item>
        <item>ח.פ</item>
        <item>פ.פ</item>
        <item>אביזר</item>
        <item>רקורד</item>
        <item>מחבר</item>
        <item>זווית</item>
    </string-array>

    <string-array name="diameter_array">
        <item>ללא</item>
        <item>3/4\"</item>
        <item>1\"</item>
        <item>1.25\"</item>
        <item>1.5\"</item>
        <item>2\"</item>
        <item>1\"×3/4\"</item>
        <item>1.5\"×1\"</item>
        <item>2\"×1.5\"</item>
        <item>2\"×1\"</item>
    </string-array>

    <string-array name="length_array">
        <item>ללא</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string name="app_name">RPStock</string>
    <string name="enter_email">הכנס כתובת אימייל</string>
    <string name="enter_employee_number">הכנס מספר עובד</string>
    <string name="enter_password">הכנס סיסמא</string>
    <string name="email">אימייל</string>
    <string name="password">סיסמא</string>
    <string name="sign_in">היכנס</string>
    <string name="home">מסך ראשי</string>
    <string name="update_stock_employee">עדכן מלאי לעובדים</string>
    <string name="add_new_item">ניהול אביזרים</string>
    <string name="manage_employees">נהל עובדים</string>
    <string name="all_stock">ניהול מלאי כללי</string>
    <string name="log_out">התנתק</string>
    <string name="enter_name">הכנס שם</string>
    <string name="name">שם</string>
    <string name="name_item">שם האביזר</string>
    <string name="admin">האם מנהל?</string>
    <string name="add_user">הוסף עובד</string>
    <string name="enter_phone">הכנס מספר טלפון</string>
    <string name="phone">טלפון</string>
    <string name="delete_employee">מחק עובד</string>
    <string name="update_employee">עדכן עובד</string>
    <string name="kind">סוג</string>
    <string name="nipple_length">אורך ניפל</string>
    <string name="diameter">קוטר</string>
    <string name="tzol">\"</string>
    <string name="amount">כמות</string>
    <string name="deleted_item">נמחק אביזר</string>
    <string name="delete_item_falied">נכשלה מחיקת אביזר!</string>
    <string name="item_added_suc">אביזר נוסף בהצלחה</string>
    <string name="add_item_failed">הוספת אביזר נכשלה</string>
    <string name="employee_updated">פרטי עובד עודכנו</string>
    <string name="error">תקלה</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
