<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageEmployeesFragment">

    <LinearLayout
        android:layout_margin="5dp"
        android:weightSum="3.3"
        android:layout_marginTop="20dp"
        android:id="@+id/enter_name_LL"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_name" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_weight="2.3"
            android:id="@+id/enter_name_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/enter_name_LL"
        android:layout_margin="5dp"
        android:weightSum="3.3"
        android:id="@+id/enter_email_LL"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_email" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_weight="2.3"
            android:id="@+id/enter_email_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:weightSum="3.3"
        android:layout_below="@id/enter_email_LL"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_password_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:lines="2"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/enter_password" />

        <EditText
            android:inputType="text"
            android:layout_weight="2"
            android:id="@+id/enter_password_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:src="@drawable/show_password" />
    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_password_LL"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_margin="5dp" />

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:indeterminate="true"
        android:id="@+id/progressbar" />

</RelativeLayout>