<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    tools:context=".Activities.LoginActivity">


    <EditText
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:inputType="textEmailAddress"
        android:layout_weight="2.3"
        android:id="@+id/enter_email_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email" />


    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_below="@id/enter_email_ET"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_password_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textPassword"
            android:layout_weight="2"
            android:id="@+id/enter_password_ET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

        <ImageButton
            android:onClick="showHidePassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:src="@drawable/show_password" />
    </LinearLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_password_LL"
        android:text="@string/sign_in"

        android:textAllCaps="false" />

    <ProgressBar
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/signin_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:indeterminate="true"
        android:id="@+id/progressbar" />

</RelativeLayout>