<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:elevation="8dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/colorAccent"
    android:layout_marginVertical="5dp"
    android:layout_height="?android:attr/listPreferredItemHeightLarge">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:id="@+id/item_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:id="@+id/item_item_seq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/item_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textDirection="rtl"
            android:layout_margin="5dp"
            android:id="@+id/item_item_diameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diameter"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_item_name" />

        <TextView
            android:textDirection="rtl"
            android:id="@+id/item_item_kind"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_item_diameter"
            android:text="@string/kind"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/item_item_diameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_item_name" />

        <ImageButton
            android:id="@+id/item_options"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/delete"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>